packages/tree-sitter-ecscript/test/corpus/advanced.txt
==================
Object field and index access
==================
let obj = {name: "ecsh", nums: [1, 2, 3]}
obj.name
obj[0]

---

(source_file
  (let_statement
    name: (variable_identifier
      (variable_identifier))
    value: (expression
      (primary_expression
        (object
          (object_entry
            key: (property_identifier
              (property_identifier))
            value: (expression
              (primary_expression
                (string))))
          (object_entry
            key: (property_identifier
              (property_identifier))
            value: (expression
              (primary_expression
                (array
                  (expression
                    (primary_expression
                      (integer)))
                  (expression
                    (primary_expression
                      (integer)))
                  (expression
                    (primary_expression
                      (integer)))))))))))
  (newline)
  (expression_statement
    (expression
      (postfix_expression
        (field_expression
          object: (primary_expression
            (identifier))
          field: (property_identifier
            (property_identifier))))))
  (newline)
  (expression_statement
    (expression
      (postfix_expression
        (index_expression
          object: (primary_expression
            (identifier))
          index: (expression
            (primary_expression
              (integer)))))))
  (newline))

==================
For with inclusive range
==================
for i in 0..=3 {
  println(i)
}

---

(source_file
  (for_statement
    name: (variable_identifier
      (variable_identifier))
    iterable: (for_range_expression
      left: (primary_expression
        (integer))
      right: (primary_expression
        (integer)))
    body: (statement_block
      (newline)
      (expression_statement
        (expression
          (postfix_expression
            (call_expression
              function: (primary_expression
                (identifier))
              arguments: (argument_list
                (expression
                  (primary_expression
                    (identifier))))))))
      (newline)))
  (newline))

==================
For with exclusive range
==================
for i in 1..10 {
  println(i)
}

---

(source_file
  (for_statement
    name: (variable_identifier
      (variable_identifier))
    iterable: (for_range_expression
      left: (primary_expression
        (integer))
      right: (primary_expression
        (integer)))
    body: (statement_block
      (newline)
      (expression_statement
        (expression
          (postfix_expression
            (call_expression
              function: (primary_expression
                (identifier))
              arguments: (argument_list
                (expression
                  (primary_expression
                    (identifier))))))))
      (newline)))
  (newline))

==================
For with range and lambda
==================
for i in 0..=3 {
  println(i)
}
let f = (x) => x * 2

---

(source_file
  (for_statement
    name: (variable_identifier
      (variable_identifier))
    iterable: (for_range_expression
      left: (primary_expression
        (integer))
      right: (primary_expression
        (integer)))
    body: (statement_block
      (newline)
      (expression_statement
        (expression
          (postfix_expression
            (call_expression
              function: (primary_expression
                (identifier))
              arguments: (argument_list
                (expression
                  (primary_expression
                    (identifier))))))))
      (newline)))
  (newline)
  (let_statement
    name: (variable_identifier
      (variable_identifier))
    value: (expression
      (primary_expression
        (lambda_expression
          (parameter_list
            (variable_identifier
              (variable_identifier)))
          body: (expression
            (identifier)
            (expression
              (primary_expression
                (integer))))))))
  (newline))

==================
Object with newline separators
==================
{
  name: "ecsh",
  nums: [1, 2, 3],
  enabled: true
}
---

(source_file
  (expression_statement
    (expression
      (primary_expression
        (object
          (newline)
          (object_entry
            key: (property_identifier
              (property_identifier))
            value: (expression
              (primary_expression
                (string))))
          (newline)
          (object_entry
            key: (property_identifier
              (property_identifier))
            value: (expression
              (primary_expression
                (array
                  (expression
                    (primary_expression
                      (integer)))
                  (expression
                    (primary_expression
                      (integer)))
                  (expression
                    (primary_expression
                      (integer)))))))
          (newline)
          (object_entry
            key: (property_identifier
              (property_identifier))
            value: (expression
              (primary_expression
                (true))))
          (newline))))))

==================
Chained string concatenation with field access
==================
func fallback_prompt(ctx) {
  return "[ecsh] " + ctx.cwd + "\n$ "
}
---

(source_file
  (function_declaration
    name: (variable_identifier
      (variable_identifier))
    parameters: (parameter_list
      (variable_identifier
        (variable_identifier)))
    body: (statement_block
      (newline)
      (return_statement
        (expression
          (additive_expression
            left: (additive_expression
              left: (primary_expression
                (string))
              right: (postfix_expression
                (field_expression
                  object: (primary_expression
                    (identifier))
                  field: (property_identifier
                    (property_identifier)))))
            right: (primary_expression
              (string)))))
      (newline))))

==================
Object empty with newline
==================
{
}
---

(source_file
  (expression_statement
    (expression
      (primary_expression
        (object
          (newline))))))

==================
Object mixed comma and newline separators
==================
{
  name: "ecsh",
  nums: [1, 2, 3]
  enabled: true,
}
---

(source_file
  (expression_statement
    (expression
      (primary_expression
        (object
          (newline)
          (object_entry
            key: (property_identifier
              (property_identifier))
            value: (expression
              (primary_expression
                (string))))
          (newline)
          (object_entry
            key: (property_identifier
              (property_identifier))
            value: (expression
              (primary_expression
                (array
                  (expression
                    (primary_expression
                      (integer)))
                  (expression
                    (primary_expression
                      (integer)))
                  (expression
                    (primary_expression
                      (integer)))))))
          (newline)
          (object_entry
            key: (property_identifier
              (property_identifier))
            value: (expression
              (primary_expression
                (true))))
          (newline))))))

==================
Multiline lambda block callbacks
==================
pub func init() {
  hook("after_cd", (ctx) => {
    zoxide_add(ctx.cwd)
  })

  register_command("z", (ctx) => {
    zoxide_jump(ctx.args)
  })
}

---

(source_file
  (function_declaration
    (variable_identifier
      (variable_identifier))
    (parameter_list)
    (statement_block
      (newline)
      (expression_statement
        (expression
          (postfix_expression
            (call_expression
              (primary_expression
                (identifier))
              (argument_list
                (expression
                  (primary_expression
                    (string)))
                (expression
                  (primary_expression
                    (lambda_expression
                      (parameter_list
                        (variable_identifier
                          (variable_identifier)))
                      (statement_block
                        (newline)
                        (expression_statement
                          (expression
                            (postfix_expression
                              (call_expression
                                (primary_expression
                                  (identifier))
                                (argument_list
                                  (expression
                                    (postfix_expression
                                      (field_expression
                                        (primary_expression
                                          (identifier))
                                        (property_identifier
                                          (property_identifier))))))))))
                        (newline))))))))))
      (newline)
      (newline)
      (expression_statement
        (expression
          (postfix_expression
            (call_expression
              (primary_expression
                (identifier))
              (argument_list
                (expression
                  (primary_expression
                    (string)))
                (expression
                  (primary_expression
                    (lambda_expression
                      (parameter_list
                        (variable_identifier
                          (variable_identifier)))
                      (statement_block
                        (newline)
                        (expression_statement
                          (expression
                            (postfix_expression
                              (call_expression
                                (primary_expression
                                  (identifier))
                                (argument_list
                                  (expression
                                    (postfix_expression
                                      (field_expression
                                        (primary_expression
                                          (identifier))
                                        (property_identifier
                                          (property_identifier))))))))))
                        (newline))))))))))
      (newline)))
  (newline))
